[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2021"

[dependencies.packet_api]
path = "packet_api"

[dependencies.server_structure]
path = "server_structure"

[dependencies.fast_server]
path = "fast_server"

[dependencies]
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
uuid = "1.7.0"
