[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2021"

[dependencies.fast_server]
path = "fast_server"

[dependencies]
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
uuid = "1.7.0"

[workspace]
members = [
    "binary_utils",
    "datatypes",
    "entmet_lib",
    "fast_protocol",
    "fast_server", "level_lib",
    "nbt_lib",
    "slot_lib",
]

[package.metadata]
rust-toolchain = "nightly"
