[package]
name = "entmet_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
datatypes = { path = "../datatypes" }
nbt_lib = { path = "../nbt_lib" }
slot_lib = { path = "../slot_lib" }
binary_utils = { path = "../binary_utils" }
tokio = { version = "1.37.0", features = ["io-util"] }
num-traits = "0.2.18"
