[package]
name = "fast_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
datatypes = { path = "../datatypes" }
binary_utils = { path = "../binary_utils" }
nbt_lib = { path = "../nbt_lib" }
entmet_lib = { path = "../entmet_lib" }
slot_lib = { path = "../slot_lib" }
serde_json = "1.0.114"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["io-util"] }
openssl = "0.10.64"
bytes = "1.5.0"
rand = "0.8.5"
