[package]
name = "fast_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
datatypes = { path = "../datatypes" }
binary_utils = { path = "../binary_utils" }
nbt_lib = { path = "../nbt_lib" }
entmet_lib = { path = "../entmet_lib" }
slot_lib = { path = "../slot_lib" }
level_lib = { path = "../level_lib" }
minecraft_assets = { path = "../minecraft_assets" }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["io-util", "full"] }
openssl = "0.10.64"
bytes = "1.5.0"
rand = "0.8.5"
