[package]
name = "level_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
nbt_lib = { path = "../nbt_lib" }
datatypes = { path = "../datatypes" }
binary_utils = { path = "../binary_utils" }
flate2 = { version = "1.0.28", features = ["zlib"] }
minecraft_assets = { path = "../minecraft_assets" }
entmet_lib = { path = "../entmet_lib" }
