[package]
name = "nbt_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
binary_utils = { path = "../binary_utils" }
tokio = { version = "1.37.0", features = ["io-util"] }
datatypes = { path = "../datatypes" }
serde = { version = "1.0.200", features = ["derive"] }

[features]
# comment this out if the files are getting too big ( remove unneccessary inline )
inline_read = []
