[package]
name  = "packet_api"
version = "0.0.1"

[lib]
name = "packet_api"
path = "src/lib.rs"

[dependencies.derives]
path = "derives"

[dependencies]
rand = { version = "0.8.5" }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4"] }
nbt_lib = { path = "../nbt_lib" }
